--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,15 @@ button{
   border: none;
   padding: 8px 16px;
   border-radius: 6px;
-  font-weight: 600;
+  font-weight: 400;
+  width: auto;
+  height: 40px;
+}
+.green-btn{
+  background-color: #22C55E;
+  color: whitesmoke;
+}
+.grey-btn{
+  background-color: #404F65;
+  color: whitesmoke;
 }
