--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -3,13 +3,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    padding: 130px 0px;
+    margin: 0px auto;
 }
 .feature-container p, .feature-container h1{
     text-align: center;
 }
 .feature-content{
-    width: 50%;
+    width: 60%;
+}
+.feature-heading{
+    margin-bottom: 20px;
 }
 .feature-cards{
     display: grid;
@@ -17,6 +21,7 @@
     width: 90%;
     gap: 10px;
     margin-top: 50px;
+    width: 80%;
 }
 .feature-card{
     text-align: center;
@@ -25,10 +30,12 @@
     width: 64px;
     background: #22C55E;
     border-radius: 6px;
-    width: fit-content;
+    width: 20px;
+    height: 20px;
     margin: 10px auto;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 15px;
 }
 
