--- a/src/styles/desc.css
+++ b/src/styles/desc.css
@@ -7,20 +7,32 @@
     margin: 50px auto;
 }
 .desc-content{
-    width: 500px;
+    width: 100%;
+}
+.content{
+    margin-top: 20px;
+}
+.desc-auth{
+    margin-bottom: 60px;
+}
+.desc-heading, .desc-content{
+    width: 60%;
 }
 .desc-heading h1, .desc-content p{
     text-align: center;
 }
 .desc-heading h1{
     color: whitesmoke;
+    font-size: xxx-large;
+    width: 100%;
+    margin: 0px auto;
 }
 .signup-btn{
     margin-left: 10px ;
 }
-.desc-container div{
-    margin-bottom: 15px;
-}
+/* .desc-container div{
+    margin-bottom: 60px;
+} */
 .desc-video img{
     width: 100%;
     height: 500px;
