--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,7 @@ nav{
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 20% 60% 20%;
     font-weight: 600;
     padding: 10px 0px;
 }
@@ -15,13 +15,15 @@ nav{
     justify-content: space-evenly;
     align-items: center;
 }
-nav ul{
+.nav-elements{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    width: 70%;
+    margin: 0px auto;
 }
-nav li{
+.nav-elements li{
     display: inline-block;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     font-weight: 500;
 }
 nav div{
@@ -36,9 +38,10 @@ nav img{
 }
 .login-btn{
     background: transparent;
+    font-size: inherit;
 }
 
-@media(max-width: 710px){
+@media(max-width: 740px){
     nav{
         grid-template-columns: 1fr
     }
@@ -58,8 +61,11 @@ nav img{
         top: -400px;
         height: 0;
     }
-    .nav-content, .nav-elements, .auth-elements{
-        display: flex;
-        flex-direction: column;
+    .nav-elements, .auth-elements{
+        width: 30%;
+        margin: 0px auto;
+        position: relative;
+        top: -400px;
+        height: 0;
     }
 }
