--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-evenly;
 }
-.footer-links li, .copyright{
+.footer-links li a, .copyright{
     color: #8896AB;
 }
 
