--- a/src/index.css
+++ b/src/index.css
@@ -40,11 +40,33 @@ a{
 
 
 @media(max-width: 820px){
+  .feature-container{
+    padding: 50px 0px;
+    margin: 40px 0px;
+  }
   .feature-cards{
     grid-template-columns: 1fr;
   }
+  .feature-card{
+    margin: 20px 0px;
+  }
+  .feature-card-content{
+    width: 70%;
+    margin: 0px auto;
+  }
+
+  .getStarted-container{
+    grid-template-columns: 1fr;
+    padding: 40px;
+    transition: 0.3s;
+  }
+
+  .demo-content{
+    padding: 30px;
+  }
   .demo-description{
     grid-template-columns: 1fr;
+    transition: 0.3s;
   }
   .demo-video-container{
     margin: 30px 0px;
@@ -52,6 +74,15 @@ a{
   .demo-points{
     grid-template-columns: 1fr;
   }
+  .point{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px 0px;
+  }
+  .point-content{
+    width: 90%;
+  }
+
   .priceTag-cards{
     flex-direction: column;
   }
