--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -12,6 +12,7 @@
 .footer-links{
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .footer-links li a, .copyright{
     color: #8896AB;
