navbar function added and some minor styles fixed

--- a/src/styles/desc.css
+++ b/src/styles/desc.css
@@ -13,7 +13,7 @@
     margin-top: 20px;
 }
 .desc-auth{
-    margin-bottom: 60px;
+    margin: 20px auto 60px auto;
 }
 .desc-heading, .desc-content{
     width: 60%;
