--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -54,18 +54,23 @@ nav img{
         justify-content: space-between;
         padding: 0px 10px;
     }
-    .nav-content{
-        width: 30%;
-        margin: 0px auto;
-        position: relative;
-        top: -400px;
-        height: 0;
+    .signUp-btn{
+        margin: 0;
     }
     .nav-elements, .auth-elements{
+        display: flex;
         width: 30%;
         margin: 0px auto;
         position: relative;
+        flex-direction: column;
         top: -400px;
         height: 0;
+        transition: 0.3s;
+    }
+
+    nav.clicked .nav-elements, nav.clicked .auth-elements{
+        top: 0;
+        height: auto;
+        transition: 0.3s;
     }
 }
