--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,9 @@ a{
     padding: 50px 0px;
     margin: 40px 0px;
   }
+  .feature-content{
+    width: 80%;
+  }
   .feature-cards{
     grid-template-columns: 1fr;
   }
@@ -109,5 +112,12 @@ a{
   .benefit-list{
     width: fit-content;
     margin: 0px auto;
+  }
+}
+
+@media(max-width: 600px){
+  .desc-video{
+    transition: 0.3px;
+    height: 300px;
   }
 }
