--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -12,7 +12,7 @@
     height: 500px;
     transition: 0.3s;
 }
-.application-container p{
+.application-desc{
     text-align: center;
     color: grey;
     margin-top: 20px;
