--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
 }
 body{
   min-height: 100vh;
-  width: 100vw;
   font-family: 'Poppins', sans-serif;
 }
 button{
@@ -41,6 +40,11 @@ a{
   width: 100px;
 }
 
+
+.p-20{
+  font-size: 20px;
+  font-weight: 500;
+}
 
 @media(max-width: 820px){
 
