--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -19,6 +19,7 @@ nav{
     display: flex;
     justify-content: space-evenly;
     width: 70%;
+    gap: 48px;
     margin: 0px auto;
 }
 .nav-elements li{
