--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -27,6 +27,8 @@
     text-align: center;
     padding: 20px;
     border-radius: 6px;
+    box-shadow: 0px 1px 2px rgba(85, 105, 135, 0.1);
+    margin: 31px 0px;
 }
 .card-title{
     color: #22C55E;
@@ -42,7 +44,7 @@
 }
 .planCycle{
     display: inline-block;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 25px;
 }
 .priceTag-card li{
@@ -54,6 +56,9 @@
     align-items: center;
     color: grey;
 }
+.price-tag-benefit{
+    margin-left: 16px;
+}
 
 .benefit-list img{
     background-color: #22C55E;
@@ -61,4 +66,6 @@
     padding: 2px;
     border-radius: 50%;
     margin-right: 3px;
+    width: 15px;
+    height: 15px;
 }
