--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,6 +6,13 @@
     background-color: #2A3342;
     padding: 50px;
 }
+.footer-mob-header{
+    display: none;
+    margin-bottom: 200px;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 44px;
+}
 .footer-link-container{
     width: 80%;
 }
