--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -18,7 +18,7 @@
 .priceTag-cards{
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 32px;
 }
 .priceTag-card{
     background: #F7F8F9;
@@ -29,6 +29,7 @@
     border-radius: 6px;
     box-shadow: 0px 1px 2px rgba(85, 105, 135, 0.1);
     margin: 31px 0px;
+    width: 100%;
 }
 .card-title{
     color: #22C55E;
