aboutUs Team details designed

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,12 @@ a{
 .grey-color{
   color: #8896AB;
 }
+.grey-color-2{
+  color: #556987;
+}
+.green-color{
+  color: #22C55E;
+}
 .white-color{
   color: whitesmoke;
 }
