--- a/src/AboutUs/styles/desc.css
+++ b/src/AboutUs/styles/desc.css
@@ -1,7 +1,8 @@
-.desc-container{
+.about-desc-container{
     display: grid;
     grid-template-columns: 50% 50%;
+    align-items: center;
 }
-.desc-img img{
+.about-desc-img img{
     width: 100%;
 }
