Photos of Arun and Yaz changed

--- a/src/AboutUs/styles/team.css
+++ b/src/AboutUs/styles/team.css
@@ -33,6 +33,9 @@
     margin: 10px 0px;
 }
 .member-profile img{
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
     border-radius: 50%;
 }
 .member-connect img{
