--- a/src/AboutUs/styles/about-us.css
+++ b/src/AboutUs/styles/about-us.css
@@ -1,4 +1,10 @@
-@media(max-width: 600px){
+
+@media(max-width: 800px){
+    .team-member-cards{
+        grid-template-columns: 50% 50%;
+    }
+}
+@media(max-width: 650px){
     .about-desc-container{
         display: block;
         margin: 50px 0px;
