--- a/src/AboutUs/styles/navbar.css
+++ b/src/AboutUs/styles/navbar.css
@@ -1,25 +1,94 @@
-#aboutUs-nav{
-    display: flex;
-    justify-content: space-between;
+nav{
+    display: grid;
+    justify-content: center;
     align-items: center;
-    /* border: 1px solid black; */
+    grid-template-columns: 20% 60% 20%;
+    font-weight: 600;
+    padding: 10px 0px;
+}
+.nav-bars-btn{
+    display: none;
+}
+.nav-bars-btn button{
+    margin-right: 25px;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 700;
+}
+#bar{
+    display: flex;
+    font-size: x-large;
 }
 .nav-content{
-    width: 100%;
-}
-.nav-content ul{
-    margin-left: 10%;
-    width: 100%;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
-.nav-content li{
+.nav-elements{
+    display: flex;
+    justify-content: space-evenly;
+    width: 70%;
+    gap: 48px;
+    margin: 0px auto;
+}
+.nav-elements li{
     display: inline-block;
-    margin: 0px 2%;
-}
-.nav-buttons{
-    width: 15%;
-}
-a{
-    font-size: 16px;
+    /* margin-left: 10px; */
     font-weight: 500;
+}
+#about-us-nav-elements a{
+    color: black;
+}
+/* .nav-elements li a{
+    color: black;
+} */
+nav div{
+    text-align: center;
+}
+nav img{
+    width: 150px;
+    height: 50px;
+}
+.signUp-btn{
+    margin-left: 10px;
+}
+.login-btn{
+    background: transparent;
+    font-size: inherit;
+}
+
+@media(max-width: 820px){
+    nav{
+        grid-template-columns: 1fr
+    }
+    .nav-logotainer{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0px 10px;
+    }
+    .signUp-btn{
+        margin: 0;
+    }
+    .nav-elements, .auth-elements{
+        display: flex;
+        width: 30%;
+        margin: 0px auto;
+        position: relative;
+        flex-direction: column;
+        top: -400px;
+        height: 0;
+        transition: 0.3s;
+    }
+    .nav-elements li a, .auth-elements .login-btn{
+        color: black;
+    }
+    .auth-elements .signUp-btn{
+        display: none;
+    }
+    nav.clicked .nav-elements, nav.clicked .auth-elements{
+        top: 0;
+        height: auto;
+        transition: 0.3s;
+    }
 }
