--- a/src/Home/styles/homepage.css
+++ b/src/Home/styles/homepage.css
@@ -1,5 +1,5 @@
 .header-container{
-    background-image: url('../assets/pattern.jpg');
+    background-image: url('../assets/newPattern.jpg');
     background-repeat: no-repeat;
     background-size: 100% 600px;
 }
