--- a/src/Home/styles/start.css
+++ b/src/Home/styles/start.css
@@ -4,7 +4,10 @@
     display: grid;
     grid-template-columns: 50% 50%;
     align-items: center;
-    background-color:rgb(46, 46, 74);
+    /* background-color:rgb(46, 46, 74); */
+    background-image: url('../assets/startedBackground.jpg');
+    background-repeat: none;
+    background-size: 100% 100%;
     padding: 60px;
     border-radius: 6px;
     margin-top: 70px;
