working container bg changed

--- a/src/Home/styles/working.css
+++ b/src/Home/styles/working.css
@@ -2,7 +2,8 @@
     margin-top: 60px;
 }
 .demo-content{
-    background-color: #2A3342;
+    background-color: #974063;
+    /* background-image: url('../assets/workingBackground.jpg'); */
     padding: 80px 10%;
 }
 
