--- a/src/Home/styles/footer.css
+++ b/src/Home/styles/footer.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #2A3342;
+    /* background-color: #2A3342; */
+    background-image: url('../assets/footerBackground.jpg');
     padding: 50px;
 }
 .footer-mob-header{
@@ -20,9 +21,9 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-.footer-links li a, .copyright{
+/* .footer-links li a, .copyright{
     color: #8896AB;
-}
+} */
 
 footer div{
     margin: 30px 0px;
