--- a/src/AboutUs/styles/team.css
+++ b/src/AboutUs/styles/team.css
@@ -1,5 +1,5 @@
 .team-container{
-    background-color: #2a3342;
+    background-color: #41436A;
     display: flex;
     flex-direction: column;
     align-items: center;
